# tootroll

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
docker/: Makefile  docker-compose.yml
docker/backend/: Dockerfile
docker/backend/src/: main.py
docker/frontend/: Dockerfile  package.json  webpack.config.js
docker/frontend/public/: global.css  index.html
docker/frontend/src/: App.svelte  routes.js
docker/frontend/src/js/: scroll.js  timelines.js
docker/frontend/src/pages/: Admin.svelte  Header.svelte  Home.svelte  NotFound.svelte  Public.svelte
src/tootroll/: __main__.py  accounts.py  fetch.py  main.py  oauth.py  parquet.py  server.py  timeline.py  toot.py  utils.py  vars.py
src/tootroll/db/: parquet.py  sqlite.py  utils.py
src/tootroll/http/: api.py  responses.py
src/tootroll/http/html/: index.html
src/tootroll/nlp/: html_text.py
src/tootroll/server/: api.py
