[tool.poetry]
name = "tootroll"
version = "0.1.2"
description = "Tootroll is a Python package to read timelines from the Mastodon network."
authors = ["Anthony Potappel <anthonyp@lakeclub.net>"]
readme = "README.md"
packages = [
    { include = "tootroll", from = "src" },
    { include = "tootroll/py.typed", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
duckdb = "^0.6.0"
pyarrow = "^10.0.1"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
websockets = "^10.4"
parsel = "^1.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[project.urls]
Homepage = "https://github.com/anthonypotappel/tootroll"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
